Source/WebKit/win/WebPreferences.cpp
@@ -101,6 +101,8 @@ static bool booleanValueForPreferencesValue(CFPropertyListRef value)
 
 static CFDictionaryRef defaultSettings;
 
+RetainPtr<CFStringRef> WebPreferences::m_applicationId = kCFPreferencesCurrentApplication;
+
 static HashMap<WTF::String, COMPtr<WebPreferences>>& webPreferencesInstances()
 {
     static NeverDestroyed<HashMap<WTF::String, COMPtr<WebPreferences>>> webPreferencesInstances;
@@ -181,6 +183,11 @@ void WebPreferences::removeReferenceForIdentifier(BSTR identifier)
     WebPreferences* webPreference = webPreferencesInstances().get(identifierString);
     if (webPreference && webPreference->m_refCount == 1)
         webPreferencesInstances().remove(identifierString);
+}
+
+CFStringRef WebPreferences::applicationId()
+{
+    return m_applicationId.get();
 }
 
 void WebPreferences::initializeDefaultSettings()
@@ -306,7 +313,7 @@ RetainPtr<CFPropertyListRef> WebPreferences::valueForKey(CFStringRef key)
     if (value)
         return value;
 
-    value = adoptCF(CFPreferencesCopyAppValue(key, kCFPreferencesCurrentApplication));
+    value = adoptCF(CFPreferencesCopyAppValue(key, applicationId()));
     if (value)
         return value;
 
@@ -317,7 +324,7 @@ void WebPreferences::setValueForKey(CFStringRef key, CFPropertyListRef value)
 {
     CFDictionarySetValue(m_privatePrefs.get(), key, value);
     if (m_autoSaves) {
-        CFPreferencesSetAppValue(key, value, kCFPreferencesCurrentApplication);
+        CFPreferencesSetAppValue(key, value, applicationId());
         save();
     }
 }
@@ -448,7 +455,7 @@ BSTR WebPreferences::webPreferencesRemovedNotification()
 
 void WebPreferences::save()
 {
-    CFPreferencesAppSynchronize(kCFPreferencesCurrentApplication);
+    CFPreferencesAppSynchronize(applicationId());
 }
 
 void WebPreferences::load()
@@ -540,6 +547,8 @@ HRESULT WebPreferences::QueryInterface(_In_ REFIID riid, _COM_Outptr_ void** ppv
         *ppvObject = static_cast<IWebPreferencesPrivate2*>(this);
     else if (IsEqualGUID(riid, IID_IWebPreferencesPrivate3))
         *ppvObject = static_cast<IWebPreferencesPrivate3*>(this);
+    else if (IsEqualGUID(riid, IID_IWebPreferencesPrivate4))
+        *ppvObject = static_cast<IWebPreferencesPrivate4*>(this);
     else if (IsEqualGUID(riid, CLSID_WebPreferences))
         *ppvObject = this;
     else
@@ -1991,5 +2000,11 @@ HRESULT WebPreferences::modernMediaControlsEnabled(_Out_ BOOL* enabled)
     if (!enabled)
         return E_POINTER;
     *enabled = boolValueForKey(WebKitModernMediaControlsEnabledPreferenceKey);
+    return S_OK;
+}
+
+HRESULT WebPreferences::setApplicationId(BSTR applicationId)
+{
+    m_applicationId = String(applicationId).createCFString();
     return S_OK;
 }
